로컬 개발에 필요한 설정 추가

--- a/src/main/resources/templates/fragment/config.html
+++ b/src/main/resources/templates/fragment/config.html
@@ -1,6 +1,5 @@
 <html lang="ko" 
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:th="http://www.thymeleaf.org">
 
     <!--configFragment 선언-->
     <th:block th:fragment="configFragment">
